# python

./: .env.example  .gitignore  README.md  basics.py  requirements.txt
.github/workflows/: log-hours.yml
docbr_generator/: .gitignore  AGENTS.md  README.md  config.toml.example  pyproject.toml
docbr_generator/src/docbr_generator/: __init__.py  __main__.py  cli.py  cnpj.py  config.py  cpf.py
docbr_generator/tests/: test_cli.py  test_cnpj.py  test_cpf.py
invoice_generator/: .gitignore  INSTALLATION_GUIDE.md  InvoiceGenerator.spec  cli.py  create_desktop_shortcut.ps1  invoice_generator.py  monthly_hours_calculator.py  pyproject.toml  run_tests.py  utils.py
invoice_generator/tests/: test_invoice_generator.py  test_monthly_hours_calculator.py  utils_test.py
log_hours/: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  TODO.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt  test_cron_env.sh  test_cron_job.sh
log_hours/.github/workflows/: main.yml
log_hours/scripts/: README.md  test_jira_connection.sh
log_hours/src/: automated_work_logger.py  constants.py  loghours.py  setup_cronjob.py
log_hours/src/services/: whatsapp_service.py
log_hours/src/tests/: test_whatsapp_service.py
superfrete_quote/: .gitignore  README.md  config.toml.example  pyproject.toml
superfrete_quote/src/superfrete_quote/: __init__.py  __main__.py  cli.py  client.py  config.py  csv_export.py  products.py  quote.py
superfrete_quote/tests/: test_client.py  test_config.py  test_csv_export.py  test_products.py  test_quote.py
utils/: amazon_practice.py  basics.py  test.py
