[tool.poetry]
name = "log_hours"
version = "1.0.0"
description = "Automated work hours logging tool using Playwright"
authors = ["Lucas Pedroso <lucas.pedrosoti@gmail.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.13"
playwright = "^1.53.0"
pytest = "^8.4.1"
python-dotenv = "^1.0.0"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["src"]
python_files = ["test_*.py", "*_test.py", "loghours.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.poetry.group]
