[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "superfrete-quote"
version = "0.1.0"
description = "CLI to quote Starlink kit freight via SuperFrete for all Brazilian states"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[project.scripts]
superfrete-quote = "superfrete_quote.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
